Add workaround for bcpkix-module which is not loaded automatically for some reason
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1903109 13f79535-47bb-0310-9956-ffa450edef68